--- a/locale/tog_social.yml
+++ b/locale/tog_social.yml
@@ -21,11 +21,14 @@ en:
       tags: Tags
       separated_by_comma: Separated by commas
     sharings: 
-      share: Share '{{name}}'
+      share: Share
+      remove_share: Remove Share
       share_with: Share with '{{name}}'
+      remove_share_from: Remove share from '{{name}}'
       shared_ok: Object shared with group "{{name}}"!
-      shared_nok: This object was already share with group "{{name}}"!      
-      removed_shared_ok: The object was successfully removed! 
+      shared_nok: This object was already share with group "{{name}}"! 
+      remove_share_ok: Share removed successfully from '{{name}}'
+      remove_share_nok: Share was not removed from '{{name}}'
     profiles:
       model:
         first_name: First Name
@@ -109,8 +112,6 @@ en:
         search_groups: Search groups
         group_tagged: Group tagged {{tag}}
         group_tags: Group tags
-        shared_ok: The sharing with the group {{name}} was successfull.
-        shared_nok: Already shared with the group {{name}}.
       member:
         created: Group created successfully.
         pending: Your group has been created but is pending for administrator's approval.
